[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/AppWindowButton.gd" type="Script" id=1]
[ext_resource path="res://resources/presets/AppButtonSelected.tres" type="StyleBox" id=2]

[sub_resource type="Theme" id=1]

[node name="AppWindowButton" type="Control"]
anchor_right = 0.031
anchor_bottom = 0.056
margin_right = 0.32
margin_bottom = -0.32
rect_min_size = Vector2( 40, 48 )

[node name="Button" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
toggle_mode = true
text = "nil"
expand_icon = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 40.0
margin_right = 32.0
margin_bottom = 48.0
theme = SubResource( 1 )
custom_styles/panel = ExtResource( 2 )

[connection signal="mouse_entered" from="Button" to="Button" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_Button_mouse_exited"]
[connection signal="toggled" from="Button" to="Button" method="_on_Button_toggled"]
